--- a/content/uses.mdx
+++ b/content/uses.mdx
@@ -16,7 +16,7 @@ Software Developer, mostly working with **Node.js** 💚. I love to write clean,
 ### 🖥️ Desktop Specifications:
 - **Processor:** AMD Ryzen 7 5800H
 - **Memory:** 32GB RAM DDR4
-- **Storage:** 512GB SSD
+- **Storage:** 1TB SSD
 - **Graphics Card:** NVIDIA GeForce RTX 3050 (4GB)
 - **Display:** 14" 2.8K (2880x1800) OLED 120Hz
 
