--- a/content/prompting-guide.mdx
+++ b/content/prompting-guide.mdx
@@ -1,139 +1,136 @@
 ---
-title: "Panduan Lengkap Teknik Prompting pada LLM: Zero-Shot, One-Shot, Few-Shot, dan Chain-of-Thought"
-description: "Pelajari dan pahami berbagai pendekatan prompting untuk memaksimalkan hasil dari model bahasa besar seperti GPT-4."
+title: "Panduan Lengkap Prompting di Large Language Models"
+description: "Pelajari metode zero-shot, one-shot, few-shot, dan chain-of-thought prompting untuk memaksimalkan kemampuan LLM seperti GPT-4."
 date: "2025-06-04"
-author: "AI Research Notes"
 ---
 
-import { CodeBlock } from '@/components/CodeBlock'
+# Panduan Lengkap Prompting di Large Language Models
 
-# Panduan Lengkap Teknik Prompting pada LLM
+Dalam era AI modern, **Large Language Models (LLMs)** seperti GPT-4, Claude, atau Gemini memerlukan cara interaksi yang efektif agar dapat memberikan output terbaik. Salah satu pendekatan utama adalah dengan teknik _prompting_, yaitu memberi instruksi dalam bentuk teks.
 
-Model bahasa besar (LLM) seperti GPT-4 memiliki kemampuan luar biasa dalam memahami bahasa manusia. Salah satu faktor kunci untuk mengoptimalkan performa model ini adalah **teknik prompting** — cara kita memberi instruksi ke model.
+## Teknik-Teknik Prompting
 
-Empat pendekatan utama yang akan kita bahas adalah:
+Empat teknik penting yang sering digunakan dalam _prompt engineering_ adalah:
 
 - Zero-shot prompting
 - One-shot prompting
 - Few-shot prompting
 - Chain-of-thought prompting
 
----
+## 🟠 Zero-Shot Prompting
 
-## 🟧 Zero-Shot Prompting
+Zero-shot prompting adalah teknik di mana model langsung diberi perintah **tanpa contoh**.
 
-Zero-shot prompting adalah metode paling sederhana. Kamu cukup memberikan instruksi langsung ke model **tanpa contoh sama sekali**.
+```text
+Translate the sentence to Indonesian: "The cat is on the roof."
+```
 
-### Kelebihan:
-- Cepat dan ringkas
-- Cocok untuk tugas-tugas umum dan langsung
-
-### Contoh Prompt:
-
-<CodeBlock language="text">
-Translate this sentence to Indonesian:  
-"The future of robotics is exciting."
-</CodeBlock>
 
 **Output:**
-> Masa depan robotika sangat menarik.
+
+Kucing itu ada di atap.
+
+
+### Kapan Digunakan?
+- Tugas sederhana dan langsung
+- Saat ingin hasil cepat tanpa menyertakan contoh
 
 ---
 
-## 🟨 One-Shot Prompting
+## 🟡 One-Shot Prompting
 
-Pada one-shot prompting, kamu memberikan **satu contoh input dan output**. Ini membantu model memahami format atau gaya output yang diinginkan.
+Pada teknik one-shot prompting, kamu memberikan **satu contoh** agar model memahami pola atau struktur yang diharapkan.
 
-### Kelebihan:
-- Memberikan konteks format output
-- Cocok untuk output yang tidak standar
+**Contoh Prompt:**
 
-### Contoh Prompt:
+Translate to Indonesian:
+"Time flies fast." → "Waktu berlalu dengan cepat."
 
-<CodeBlock language="text">
-Translate the sentence to Indonesian:  
-"Success is not final." → "Kesuksesan bukanlah akhir."
+"Knowledge is power." →
 
-Translate the sentence to Indonesian:  
-"Failure is not fatal."
-</CodeBlock>
 
 **Output:**
-> Kegagalan bukanlah hal yang mematikan.
+
+Pengetahuan adalah kekuatan.
+
+
+### Kelebihan:
+- Cocok untuk mengarahkan format hasil
+- Berguna untuk output yang butuh gaya atau struktur tertentu
 
 ---
 
-## 🟩 Few-Shot Prompting
+## 🟢 Few-Shot Prompting
 
-Few-shot prompting menyajikan **beberapa contoh (biasanya 2–5)** agar model bisa meniru pola dari input-output tersebut.
+Few-shot prompting memberikan **beberapa contoh** (biasanya 2–5) sebelum tugas utama. Ini membantu model memahami konteks, gaya, dan pola yang konsisten.
 
-### Kelebihan:
-- Meningkatkan konsistensi
-- Cocok untuk tugas kompleks atau domain khusus
+**Contoh Prompt:**
 
-### Contoh Prompt:
+Translate to Indonesian:
 
-<CodeBlock language="text">
-Translate the following:  
-"Time is precious." → "Waktu itu berharga."  
-"Knowledge is power." → "Pengetahuan adalah kekuatan."  
-"Consistency builds trust." →
-</CodeBlock>
+    "Practice makes perfect." → "Latihan membuat sempurna."
+
+    "Better late than never." → "Lebih baik terlambat daripada tidak sama sekali."
+
+    "Actions speak louder than words." →
+
 
 **Output:**
-> Konsistensi membangun kepercayaan.
+
+Tindakan berbicara lebih keras daripada kata-kata.
+
+
+### Kapan Digunakan?
+- Tugas kompleks
+- Output dengan format tetap atau gaya tertentu
 
 ---
 
-## 🟦 Chain-of-Thought Prompting
+## 🔵 Chain-of-Thought Prompting
 
-Chain-of-thought (CoT) prompting mendorong model untuk **berpikir secara bertahap** sebelum memberikan jawaban akhir.
+Chain-of-thought (CoT) prompting adalah metode di mana model diminta untuk **berpikir langkah demi langkah** sebelum menjawab.
 
-### Kelebihan:
-- Meningkatkan kemampuan penalaran
-- Cocok untuk soal logika, matematika, dan pemrograman
+**Contoh Prompt:**
 
-### Contoh Prompt:
+Q: A bookstore sells books for $15 each. If you buy 3 books, how much do you pay?
 
-<CodeBlock language="text">
-Q: If you have 6 apples and give away 2, how many apples are left?  
 Let's think step by step.
-</CodeBlock>
+
 
 **Output:**
-> I have 6 apples. I give away 2 apples.  
-> 6 - 2 = 4.  
-> The answer is 4 apples.
+
+Each book costs $15. If you buy 3 books:
+15 × 3 = 45.
+You pay $45 in total.
+
+
+### Kelebihan:
+- Sangat efektif untuk soal matematika, logika, dan pemrograman
+- Mengurangi kesalahan reasoning
 
 ---
 
-## 📊 Perbandingan Teknik Prompting
+## 📊 Perbandingan Teknik
 
-| Teknik             | Jumlah Contoh | Cocok untuk                     | Kelebihan                           |
-|--------------------|---------------|----------------------------------|--------------------------------------|
-| Zero-shot          | 0             | Tugas langsung dan sederhana     | Cepat, tanpa format khusus           |
-| One-shot           | 1             | Tugas dengan format spesifik     | Bantu model pahami pola              |
-| Few-shot           | 2–5           | Output kompleks atau bergaya     | Output lebih konsisten               |
-| Chain-of-thought   | 0+ (dengan instruksi) | Tugas logika dan reasoning | Tingkatkan kemampuan penalaran       |
-
----
-
-## 🧠 Tips Memilih Teknik Prompting
-
-- Gunakan **zero-shot** untuk tugas-tugas sederhana.
-- Pakai **one-shot atau few-shot** jika model menghasilkan output tidak konsisten.
-- Gunakan **chain-of-thought** jika model sering salah dalam perhitungan/logika.
+| Teknik             | Contoh yang Diberikan | Cocok Untuk                      |
+|--------------------|------------------------|-----------------------------------|
+| Zero-shot          | 0                      | Tugas umum dan langsung          |
+| One-shot           | 1                      | Format output tertentu           |
+| Few-shot           | 2–5                    | Tugas rumit, domain spesifik     |
+| Chain-of-thought   | 0+ (berpikir eksplisit) | Penalaran bertahap dan logika    |
 
 ---
 
 ## 📌 Kesimpulan
 
-Memahami dan menerapkan teknik prompting secara tepat akan sangat memengaruhi kualitas output dari LLM. Tidak semua tugas cocok dengan satu metode—eksperimen adalah bagian penting dari proses.
+Memahami teknik prompting sangat penting untuk mendapatkan hasil maksimal dari LLM. Tidak ada metode yang selalu paling tepat—pilihan tergantung pada jenis tugas, kompleksitas, dan kebutuhan output.
+
+Eksperimen dan pengujian berulang akan membantumu mengembangkan insting terbaik dalam merancang prompt.
 
 ---
 
-## 🔗 Referensi
+## 📚 Referensi
 
-- [OpenAI - Prompt Engineering Guide](https://platform.openai.com/docs/guides/gpt-best-practices)
-- [Chain-of-Thought Paper](https://arxiv.org/abs/2201.11903)
-- [Papers with Code - Few-Shot Learning](https://paperswithcode.com/task/few-shot-learning)
+- [OpenAI Prompt Engineering Guide](https://platform.openai.com/docs/guides/gpt-best-practices)
+- [Chain-of-Thought Paper (Wei et al., 2022)](https://arxiv.org/abs/2201.11903)
+- [Papers with Code - Few-shot Learning](https://paperswithcode.com/task/few-shot-learning)
