--- a/content/prompting-guide.mdx
+++ b/content/prompting-guide.mdx
@@ -2,6 +2,8 @@
 title: "Panduan Lengkap Prompting di Large Language Models"
 description: "Pelajari metode zero-shot, one-shot, few-shot, dan chain-of-thought prompting untuk memaksimalkan kemampuan LLM seperti GPT-4."
 date: "2025-06-04"
+tags: ["Prompting"]
+emoji: "📁"
 ---
 
 # Panduan Lengkap Prompting di Large Language Models
